fix: Adding seperators, overflow fix for changelog

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -142,6 +142,9 @@
   }
 
   &--changelog {
+    hr  {
+      @apply mb-4;
+    }
     img {
       @apply max-w-full block;
     }
